--- a/Homeworks/01.md
+++ b/Homeworks/01.md
@@ -6,3 +6,6 @@
 ### Read first two chapters of book
 
 ### 
+
+
+![screenshot_for_milan](https://user-images.githubusercontent.com/58112365/205174295-27cf4e69-2bbc-483f-9338-e748c1e91813.png)
