--- a/Homeworks/01.md
+++ b/Homeworks/01.md
@@ -1,6 +1,11 @@
 
 ### Download and install Python
 
+- Very important: Both checkboxes should be checked in order Python to work normally with PyCharm!
+
+![screenshot_for_milan](https://user-images.githubusercontent.com/58112365/205174295-27cf4e69-2bbc-483f-9338-e748c1e91813.png)
+
+
 ### Download and install PyCharm
 
 ### Read first two chapters of book
@@ -8,4 +13,3 @@
 ### 
 
 
-![screenshot_for_milan](https://user-images.githubusercontent.com/58112365/205174295-27cf4e69-2bbc-483f-9338-e748c1e91813.png)
