--- a/Homeworks/01.md
+++ b/Homeworks/01.md
@@ -5,6 +5,12 @@
 
 ![screenshot_for_milan](https://user-images.githubusercontent.com/58112365/205174295-27cf4e69-2bbc-483f-9338-e748c1e91813.png)
 
+- How to check if you installed Python correctly?
+  - Open terminal
+  - enter following command 'python' or 'python3' and you should see sth like following picture.
+  - Pay attention to carret sign (element that is underlined with red)
+
+<img width="561" alt="Screenshot 2022-12-01 at 23 43 35" src="https://user-images.githubusercontent.com/58112365/205174995-0a1ebd99-65e0-45c7-a989-6dc5dfba6c91.png">
 
 ### Download and install PyCharm
 
