--- a/Homeworks/01.md
+++ b/Homeworks/01.md
@@ -1,21 +1,28 @@
 
 ### Download and install Python
 
+- Where to find Python installation?
+  - At the bottom of this page you can find materials for download: https://www.python.org/downloads/release/python-370/
+
 - Very important: Both checkboxes should be checked in order Python to work normally with PyCharm!
 
 ![screenshot_for_milan](https://user-images.githubusercontent.com/58112365/205174295-27cf4e69-2bbc-483f-9338-e748c1e91813.png)
 
 - How to check if you installed Python correctly?
   - Open terminal
-  - enter following command 'python' or 'python3' and you should see sth like following picture.
+  - Enter following command 'python' or 'python3' and you should see sth like following picture.
   - Pay attention to carret sign (element that is underlined with red)
 
 <img width="561" alt="Screenshot 2022-12-01 at 23 43 35" src="https://user-images.githubusercontent.com/58112365/205174995-0a1ebd99-65e0-45c7-a989-6dc5dfba6c91.png">
 
 ### Download and install PyCharm
 
+- PyCharm download link: https://www.jetbrains.com/pycharm/download/#section=mac
+
 ### Read first two chapters of book
 
-### 
+### Install GitBash
+
+- Link to GitBash download: https://git-scm.com/downloads
 
 
