--- a/Homeworks/03.md
+++ b/Homeworks/03.md
@@ -1,3 +1,4 @@
+```python
 
 # 1. Create list with numbers from 0 to 20.
 #    Name list as list_1.
@@ -73,3 +74,6 @@
 # 20. Try to find some method of list
 #     class that we haven't been using.
 #     Show some example with that method.
+
+```
+
