--- a/Homeworks/04.md
+++ b/Homeworks/04.md
@@ -1,1 +1,97 @@
 
+
+# 1. Write a Python program that starts with two dictionaries
+# and creates a new dictionary containing only the key-value
+# pairs that are common to both dictionaries.
+
+# Tips: Generate starting dictionaries by yourself.
+
+
+# 2. Write a Python program that starts with a list of dictionaries
+# and returns a new list containing only the dictionaries where
+# the "country" key is "USA" and the "population" key is greater than 1000000.
+
+# Tips: Generate some random data in disc format -
+[
+    {'country': 'some country name', 'population': 'some population value'},
+    {'country': 'some country name', 'population': 'some population value'}
+]
+
+
+# 3. Write a Python program that takes a dictionary as input and
+# returns a new dictionary where the keys and values are swapped.
+
+# Tips: Generate starting dictionaries by yourself.
+
+
+# 4. Write a Python program that takes a list of dictionaries and
+# returns a new list containing only the dictionaries where the
+# "name" key starts with the letter "J".
+
+# Tips: Create your own starting list with dictionaries that
+# will be used in this example.
+
+# 5. Write a Python program that takes two dictionaries
+# and merges them into a single dictionary.
+
+# 6. Write a Python program that takes a list of dictionaries
+# and returns a new list containing only the dictionaries where
+# the "age" key is greater than or equal to 18.
+
+# Tips: Generate your own list with dictionaries that
+# will be used in this example.
+
+# 7. Write a Python program that counts the frequency of
+# each word in a string using a dictionary.
+
+# Tips: Generate starting string/sentence by yourself.
+
+
+# 8. Write a Python function that takes a dictionary as
+# input and returns the keys in alphabetical order.
+
+# Tips: Google solution for this example. We haven't covered
+# all elements that will be needed for solution.
+
+# 9. Write a Python program that starts with a dictionary and
+# returns a new dictionary containing only the key-value pairs
+# where the value is an even number.
+
+# Tips: Generate starting dictionary by yourself.
+
+# 10. Write a Python program that starts with list of dictionaries
+# and a KEY and returns a new list containing only the
+# dictionaries where the specified KEY is present.
+
+# Tips: Generate starting list with dictionaries and KEY by
+# yourself.
+
+# 11. Write a Python program that takes a dictionary and
+# returns the sum of all the values in the dictionary.
+
+# 12. Write a Python program that takes a dictionary
+# and returns the key that has the highest value.
+
+# 13. Write a Python program that takes a dictionary
+# and a list of keys as input and returns a new dictionary
+# containing only the key-value pairs where the key is in
+# the specified list.
+
+# Tips: Generate data that should be used in this example.
+
+# 14. Write a Python program that takes a list of dictionaries
+# and returns a new list containing only the dictionaries where
+# the "name" key is present and the "age" key is less than 30.
+
+# Tips: Generate data that should be used in this example.
+
+# 15. Write a Python function that takes a dictionary and a
+# value as input and returns a list of keys that have that value.
+
+# Tips: Generate data that should be used in this example.
+
+# 16. Think about 'Life pattern in programming' (I believe I named
+# it that way during last lesson). Explain that using your words.
+# Create example that shows implementation of that pattern.
+
+
