--- a/Homeworks/04.md
+++ b/Homeworks/04.md
@@ -1,5 +1,5 @@
 
-
+python"""
 # 1. Write a Python program that starts with two dictionaries
 # and creates a new dictionary containing only the key-value
 # pairs that are common to both dictionaries.
@@ -93,5 +93,5 @@
 # 16. Think about 'Life pattern in programming' (I believe I named
 # it that way during last lesson). Explain that using your words.
 # Create example that shows implementation of that pattern.
-
+"""
 
