--- a/Homeworks/06.md
+++ b/Homeworks/06.md
@@ -1,5 +1,5 @@
 
-
+python```
 
 # Create FastApi backend service with following features:
 #   - There is Pydantic BaseModel that helps us keep
@@ -29,4 +29,4 @@
 #   - Create route with name 'get_students_by_age'. It accept student age as
 #     input parameter (argument) and return all students with specific age.
 
-
+```
